fixing cad currency overlapping some product titles

--- a/src/components/product/product.scss
+++ b/src/components/product/product.scss
@@ -60,6 +60,7 @@ product {
           align-items: center;
           justify-content: flex-end;
           margin: 0;
+          margin-left: 13px;
           white-space: normal;
           div {
             display: block;
